add mathjax, 538 puzzle post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,11 @@
       z-index: 900;
     }
   </style>
+
+  <!--MathJax-->
+  <script type="text/javascript" async
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+  </script>
 </head>
 <body>
   <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
